fixed layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -45,72 +45,29 @@
 
 /* Main Image */
 
-.main-img-content {
-  z-index: 10;
-}
-
 .main-img {
-  position: absolute;
-  top: 0;
   left: 0;
-  width: 100%;
-  height: 500px;
-  background-image: linear-gradient(
-    rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0.5)
-  ), url('./assets/images/imgplaceholder.jpg');
+  max-width:100%;
+  max-height:100%;
+  width: auto;
+  height: auto;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin: auto;
-}
-
-.main-img > header {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 20px 10px;
-  background: inherit;
-  background-attachment: fixed;
-  overflow: hidden;
-}
-.main-img > header::before {
-  content: "";
-  position: absolute;
-  top: -20px;
-  left: 0;
-  width: 200%;
-  height: 200%;
-  background: inherit;
-  background-attachment: fixed;
-  -webkit-filter: blur(7px);
-  filter: blur(7px);
-}
-.main-img > header::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.25)
-}
-.main-img > header > h1 {
-  margin: 0;
-  color: white;
   position: relative;
-  z-index: 1;
-}
-
-* {
-  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .headline {
   font-family: 'Bebas Neue', sans-serif;
   font-size: 2em;
   color: #fff;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 @keyframes App-logo-spin {
